@@ -1,3 +1,8 @@
+2008-01-02  0.33 - H.Merijn Brand   <h.m.brand@xs4all.nl>
+
+	* Text-CSV_XS now under git
+	* Upped copyright to 2008
+
 2007-10-24  0.32 - H.Merijn Brand   <h.m.brand@xs4all.nl>
 
 	* Added $csv->error_diag () to SYNOPSIS
